--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 numpy==1.26.4
-pandas==2.1.5
+pandas==2.0.3
 matplotlib==3.8.3
 seaborn==0.13.2
 scipy==1.13.0
-black==24.8.0  # For CI lint
-pytest==7.4.4  # For tests/
-ipykernel==6.29.4  # For Jupyter
-nbconvert==7.16.3  # For CI notebook execute
+black==24.8.0
+pytest==7.4.4
+ipykernel==6.29.4
+nbconvert==7.16.3
